--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,17 @@
 <html lang="en">
   {% include head.html %}
   <body>
+      <script type="text/javascript">
+          var ad_idzone = "3052950",
+	        ad_width = "728",
+	        ad_height = "90";
+      </script>
+      <script type="text/javascript" src="https://ads.exosrv.com/ads.js"></script>
+      <noscript>
+        <a href="https://main.exosrv.com/img-click.php?idzone=3052950" target="_blank">
+          <img src="https://syndication.exosrv.com/ads-iframe-display.php?idzone=3052950&output=img&type=728x90" width="728" height="90">
+        </a>
+      </noscript>
       {% include header.html %}
       {% include footer.html %}
   </body>
