--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
           <span class="site-description">{{site.user_title}}</span>
         </h1>
         <div class="header-icons">
-          <a aria-label="Send email" href="mailto:anna@femdom.lv"><i class="icon fa fa-envelope"></i></a>
+          <a aria-label="Send email" href="mailto:domainlv@gmail.com"><i class="icon fa fa-envelope"></i></a>
         </div>
     </div>
   </div>
